# 2

./: gradle.properties  import-summary.txt  settings.gradle
app/: CMakeLists.txt  CMakeLists_bak.txt  build.gradle
app/debug/: output.json
app/src/androidTest/java/example/com/robottime/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/lm/zh/: default.dic  default.lm
app/src/main/cpp/: common.h  cv.cpp  cv.h  native-lib.cpp
app/src/main/cpp/SerialPort/: CMakeLists.txt  SerialPort.c  SerialPort.h
app/src/main/cpp/opencv_src/sdk/: build.gradle
app/src/main/java/adapter/: BlueToothDeviceAdapter.java  FunPanelItemAdapter.java  MenuListContentAdapter.java  MsgAdapter.java  UsbDeviceAdapter.java  UsbSerialAdapter.java
app/src/main/java/android_opencv_api/: CvHelper.java  CvSelector.java
app/src/main/java/android_serialport_api/: SerialPort.java  SerialPortFinder.java
app/src/main/java/com/example/robottime/: CustomDialog.java  FunPanelItemBean.java  SheduleReceiver.java  StaticVariable.java
app/src/main/java/com/example/robottime/activity/: ActivityBleDevice.java  ActivityCv.java  ActivityFunPanel.java  ActivityGrbl.java  ActivityKeyboard.java  ActivityMain.java  ActivityStart.java  ActivityUsbDevice.java  ActivityVoice.java
app/src/main/java/com/example/robottime/menu/: MenuListContentModel.java
app/src/main/java/com/example/robottime/msg/: Host.java  Slave.java
app/src/main/java/com/example/robottime/usb_serial/driver/: CdcAcmSerialDriver.java  FtdiSerialDriver.java  (+9 more)
app/src/main/java/com/example/robottime/utils/: BitmapUtil.java  CommonUtil.java  DataFormat.java  FileUtil.java  ImageProcessor.java  LogUtils.java  RtHttpUtil.java  ScreenContent.java  SheduleTask.java  SystemUtil.java  Utils.java
app/src/main/java/com/example/robottime/voice/: Oscilloscope.java  RecognitionListener.java  RecognizerTask.java
app/src/main/res/drawable/: seek_bar_thumb_white.xml  selector_butn_toogle.xml  textview_border.xml  view_line_leftright.xml  view_radius.xml  view_radius_gradual.xml  view_radius_gradual_1.xml  view_radius_gradual_2.xml  view_rect_list.xml
app/src/main/res/layout/: dialog_conn_mode.xml  dialog_cv_set.xml  dialog_feedback.xml  dialog_info.xml  dialog_key_fn.xml  dialog_send_interval.xml  dialog_update.xml  item_bledevice_list.xml  item_funpanel.xml  item_host_msg.xml  item_menu.xml  item_otgdevice_list.xml  item_simple_spinner.xml  item_slave_msg.xml  layout_ble_device.xml  layout_cv_tracking.xml  layout_fun_panel.xml  layout_grbl.xml  layout_keyboard.xml  layout_main.xml  layout_start.xml  layout_usb_device.xml  layout_voice.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: attr.xml  colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/example/com/robottime/: ExampleUnitTest.java
(+134 files in other folders)
